<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.amarpreetsinghprojects.myapplication.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="right"
        android:gravity="right"
        android:textSize="30sp"
        android:layout_weight="1"
        android:id="@+id/textView1"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:paddingBottom="16dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/symbol_textView"
            android:textSize="30sp"
            android:paddingRight="16dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:id="@+id/textView2"
            android:textSize="30sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="4">

        <TableLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3">
            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_seven"
                    android:text="@string/seven"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_eight"
                    android:text="@string/eight"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_nine"
                    android:text="@string/nine"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_six"
                    android:text="@string/six"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_five"
                    android:text="@string/five"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_four"
                    android:text="@string/four"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_three"
                    android:text="@string/three"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_two"
                    android:text="@string/two"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_one"
                    android:text="@string/one"
                    android:textSize="30sp" />
            </TableRow>

            <TableRow
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_dot"
                    android:text="@string/dot"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="button_zero"
                    android:text="@string/zero"
                    android:textSize="30sp" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/pad_button_color"
                    android:onClick="result"
                    android:text="@string/equalto"
                    android:textSize="30sp" />
            </TableRow>
        </TableLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/reset_button_color"
                android:onClick="reset"
                android:text="@string/reset"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/sideButton_color"
                android:onClick="button_divide"
                android:text="@string/divide"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/sideButton_color"
                android:onClick="button_multiply"
                android:text="@string/multiply"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/sideButton_color"
                android:onClick="button_minus"
                android:text="@string/minus"
                android:textSize="30sp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/sideButton_color"
                android:onClick="button_plus"
                android:text="@string/plus"
                android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
